fix spacing between `h1.aligned-title` and lead text

--- a/assets/targets/components/text/_lead.scss
+++ b/assets/targets/components/text/_lead.scss
@@ -69,11 +69,21 @@
   }
 }
 
-.uomcontent h1.aligned-title + .lead + p {
-  @include padding-leader(1);
+.uomcontent h1.aligned-title + .lead {
+  & + p {
+    @include padding-leader(1);
 
-  &:before {
-    display: none;
+    &:before {
+      display: none;
+    }
+  }
+  
+  &.left {
+    padding-top: 0;
+    
+    & + p {
+      padding-top: 0;
+    }
   }
 }
 
